@@ -4256,6 +4256,9 @@ Select the scaling function to use for chrominance scaling.
 For details see lscale.
 .IPs filter-strength=<value>
 Set the effect strength for the lscale/cscale filters that support it.
+.IPs noise-strength=<value>
+Set how much noise to add. 0 to disable (default), 1.0 for level suitable
+for dithering to 6 bit.
 .IPs stereo=<value>
 Select a method for stereo display.
 You may have to use \-aspect to fix the aspect value.
